<?xml version="1.0"?>
<package format="2">
  <name>leo_bringup</name>
  <version>0.0.0</version>
  <description>The leo_bringup package</description>

  <maintainer email="husarion@todo.todo">husarion</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>raspicam_node</exec_depend>

</package>
