<?xml version="1.0"?>
<package format="2">
  <name>leo_bringup</name>
  <version>0.2.0</version>
  <description>
    This package provides LeoRover capability.
  </description>

  <maintainer email="support@fictionlab.pl">fictionlab</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>raspicam_node</exec_depend>

</package>
