<?xml version="1.0"?>
<package format="2">
  <name>leo_bringup</name>
  <version>1.0.1</version>
  <description>
    This package provides LeoRover capability.
  </description>

  <maintainer email="support@fictionlab.pl">fictionlab</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>raspicam_node</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <exec_depend>leo_description</exec_depend>

</package>
